# sudospawner

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  RELEASE.md  jupyterhub_config.py  pyproject.toml  setup.py  test-requirements.txt
.github/workflows/: release.yaml  release.yml  test.yaml  test.yml
example/: Dockerfile  sudoers
examples/: Dockerfile  jupyterhub_config.py  sudoers
scripts/: sudospawner
sudospawner/: __init__.py  mediator.py  service.py  spawner.py  version.py
sudospawner/tests/: mockserver.py  test_sudospawner.py
